--- a/app/views/application.html.erb
+++ b/app/views/application.html.erb
@@ -5,12 +5,11 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'application', media: 'all' %>
+    <%= stylesheet_pack_tag 'admin/application' %>
   </head>
 
-  <body>
+  <body class="app header-fixed sidebar-fixed aside-menu-fixed sidebar-lg-show">
     <div id='app'>
-      <router-view></router-view>
     </div>
     <%= javascript_pack_tag 'admin/application' %>
   </body>
