Enso Datatable Component

--- a/app/javascript/src/style.scss
+++ b/app/javascript/src/style.scss
@@ -6,6 +6,7 @@
 
 // Import styles
 @import "~@coreui/coreui/scss/coreui";
+@import "bulma/css/bulma.css";
 
 // If you want to add something do it here
 @import "custom";
