--- a/app/javascript/src/application.scss
+++ b/app/javascript/src/application.scss
@@ -20,3 +20,10 @@ body {
   margin-top: 4px;
   margin-right: 6px;
 }
+
+#api-wait {
+  left: 50%;
+  position: fixed;
+  top: 50%;
+  z-index: 99999;
+}
