Work in progress... Model show and hide works. with vue-events.

--- a/app/javascript/src/application.scss
+++ b/app/javascript/src/application.scss
@@ -35,7 +35,7 @@ body {
   text-overflow: clip;
 }
 
-.vuetable-body-wrapper .user-report .vuetable-th-component-checkbox {
+.vuetable-body-wrapper .user-report .user-checkbox {
   width: 35px;
 }
 
