Modify and delete is working now.

--- a/app/views/application.html.erb
+++ b/app/views/application.html.erb
@@ -9,7 +9,7 @@
   </head>
 
   <body class="app header-fixed sidebar-fixed aside-menu-fixed sidebar-lg-show">
-    <div id='app' current_user="<%= @current_user %>">
+    <div id='app' current_user="<%= @current_user %>" api_url="<%= @api_url %>" >
     </div>
     <%= javascript_pack_tag 'admin/application' %>
   </body>
